# shopin

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindShapelib.cmake  provide_test.cmake
doc/: SHP_File_Api.html
src/: CMakeLists.txt  SHPReader.cpp  SHPReader.h  shp_reader.cpp
tests/: CMakeLists.txt  TestSHPReader.cpp
